umol-models-graph/tests/mol_parsing/snapshots/summary/compliance__mol_parsing__store_summary_snapshot@alias_atom.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
input_file: umol-models-graph/tests/mol_parsing/data/properties/alias_atom.mol
---
atom_count: 4
bond_count: 3
sum_formula: CO
graph6: CX
