umol-models-graph/tests/mol_parsing/snapshots/summary/compliance__mol_parsing__store_summary_snapshot@ammonia_charges_zbo.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 2
bond_count: 1
sum_formula: BN
graph6: A_
