umol-models-graph/tests/mol_parsing/snapshots/summary/compliance__mol_parsing__store_summary_snapshot@benzene_attachments.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 6
bond_count: 6
sum_formula: C6
graph6: EpDG
