umol-models-graph/tests/mol_parsing/snapshots/summary/compliance__mol_parsing__store_summary_snapshot@benzene_superatom.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
input_file: umol-models-graph/tests/mol_parsing/data/sgroups/benzene_superatom.mol
---
atom_count: 6
bond_count: 3
sum_formula: CCs2O3
graph6: E@CO
