umol-models-graph/tests/mol_parsing/snapshots/summary/compliance__mol_parsing__store_summary_snapshot@butanoic_acid.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
input_file: umol-models-graph/tests/mol_parsing/data/standard/valid/butanoic_acid.mol
---
atom_count: 14
bond_count: 13
sum_formula: C4H8O2
graph6: MiOGOO@?OA?@?A??_
