umol-models-graph/tests/mol_parsing/snapshots/summary/compliance__mol_parsing__store_summary_snapshot@complex_sgroups.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
input_file: umol-models-graph/tests/mol_parsing/data/sgroups/complex_sgroups.mol
---
atom_count: 23
bond_count: 25
sum_formula: C18O4P
graph6: "ViO_S?A?G?_@?`?O??G?@??C@?G?????CC?@@?????C_"
