umol-models-graph/tests/mol_parsing/snapshots/summary/compliance__mol_parsing__store_summary_snapshot@complex_standard.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
input_file: umol-models-graph/tests/mol_parsing/data/sgroups/complex_standard.mol
---
atom_count: 48
bond_count: 47
sum_formula: C16N11S16Zn3
graph6: ohCGGC@???_@?@??_?G?@??D???C???O???O??A?????C?????A????_???G???@????C????G????G????E????@????O?????C?????C?G??????????_?????G?????@??????C??????G??????G??????C?O????@??????O???????C???????C
