umol-models-graph/tests/mol_parsing/snapshots/summary/compliance__mol_parsing__store_summary_snapshot@cyclohex_linknode.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 4
bond_count: 4
sum_formula: C3
graph6: "C{"
