umol-models-graph/tests/mol_parsing/snapshots/summary/compliance__mol_parsing__store_summary_snapshot@data_groups.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
input_file: umol-models-graph/tests/mol_parsing/data/sgroups/data_groups.mol
---
atom_count: 13
bond_count: 13
sum_formula: C11O2
graph6: LP?GUO??G@IC?_
